--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,22 @@ git+https://github.com/m-bain/whisperx.git
 pysubs2
 tqdm
 wget
-nemo_toolkit[asr]
 llama-index
 langchain
+git+https://github.com/NVIDIA/NeMo.git
+hydra-core
+llvmlite
+omegaconf
+Cython
+jiwer
+braceexpand
+webdataset
+librosa
+sentencepiece
+youtokentome
+pyannote-audio
+transformers
+pandas
+inflect
+editdistance
+pytorch-lightning
